# Pacioli

./: .gitignore  Makefile  readme.md
backend/: pyproject.toml
backend/app/: crud.py  database.py  helpers.py  main.py  models.py  schemas.py  validators.py
backend/app/routers/: accounts.py  balance.py  centralisateur.py  chart.py  checks.py  clients.py  controls.py  entries.py  exercices.py  fec.py  history.py  imports.py  journals.py  piece.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: DataTable.tsx  PieceRowsTable.tsx  PreserveSearchNavLink.tsx
frontend/src/context/: AppContext.tsx
frontend/src/modules/pieces/: amount.ts  diff.ts  rowsReducer.ts  types.ts  useAccountSuggest.ts  useTotals.ts
frontend/src/modules/utils/: amount.ts
frontend/src/pages/: Balance.tsx  Centralisateur.tsx  Chart.tsx  Clients.tsx  Controls.tsx  Entries.tsx  Exercices.tsx  Fec.tsx  History.tsx  Import.tsx  NewPiecePage.tsx  PiecePage.tsx
